--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block body %}
     <h1>Main page!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto asperiores delectus, deleniti distinctio dolor, fugit harum in labore natus optio praesentium quidem quisquam quo, sapiente sit suscipit. Placeat, praesentium?</p>
 {% endblock %}
