--- a/main/templates/day_info/form.html
+++ b/main/templates/day_info/form.html
@@ -3,6 +3,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <input type="hidden" name="user" value="{{ user.id }}">
         <input type="submit" value="Save">
     </form>
 {% endblock %}
