--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -18,7 +18,7 @@
             <h2><a href="{% url 'event-new' %}">New Event</a></h2>
             <h2><i>{{ user.username }}</i><a href="{% url 'logout' %}">Logout</a></h2>
         {% else %}
-            <h2><a href="{% url 'login' %}">Login</a></h2>
+            <h2><a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a></h2>
         {% endif %}
     </div>
 </header>
